<resources>
    <string name="app_name">Dots and boxes</string>
    <string name="title_activity_game_view">GameView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used in activity_main_menu_view -->
    <string name="new_game_title">New Game</string>
    <string name="game_width">Game Width</string>
    <string name="game_height">Game Height</string>
    <string name="add_players">Add Players</string>
    <string name="add_human_player">Human</string>
    <string name="add_computer_player">Computer</string>
    <string name="start_game">Start Game</string>
    <string name="game_size_hint">5</string>
    <string name="game_player_hint">1</string>
</resources>
